fix details on mobile 2

--- a/apps/website/public/style.css
+++ b/apps/website/public/style.css
@@ -4,6 +4,8 @@ body {
   background: #000;
   text-align: center;
   font-family: 'Inter', sans-serif;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 h1 {
